--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "next-themes": "^0.4.3",
     "nextjs-toploader": "^3.7.15",
     "node-pg-migrate": "^7.7.1",
+    "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
-    "raw-loader": "^4.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "sanitize-html": "^2.13.1",
@@ -46,6 +46,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/node-pg-migrate": "^2.3.1",
+    "@types/nodemailer": "^6.4.16",
     "@types/pg": "^8.11.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
