--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,13 @@
     },
     "verbatimModuleSyntax": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "migrate.config.js",
+    "**/**/*.html"
+  ],
   "exclude": ["node_modules"]
 }
